Task recovery implemented and tested